src/objects/EventCalendarOptions__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Event calendar option to allow dragging and setting few options like start hour and end hour on the calendar.</description>
    <fields>
        <fullName>End_Hour__c</fullName>
        <defaultValue>22</defaultValue>
        <inlineHelpText>Set the end of the Day view. Uses 0-23 for hours</inlineHelpText>
        <label>End Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slot_Minutes__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>Length of time per block in the calendar. 1-60 minutes.</inlineHelpText>
        <label>Slot Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <defaultValue>6</defaultValue>
        <inlineHelpText>Set the start of the Day view. Uses 0-23 for hours.</inlineHelpText>
        <label>Start Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EventCalendarOptions</label>
</CustomObject>